mila de berenjena recipe. Yummy.

--- a/anthr.html
+++ b/anthr.html
@@ -6,6 +6,54 @@
     </head>
 
    <body>
-        <h1>EggWHite</h1>
-   </body>
+        <h1>EggWHite's Recipe to a delicious Mila de berenjena!</h1>
+        <p><img width="250" height="200" src="https://lacampagnola.com/uploads/recipes/5dd702ae93eb0.jpg" 
+            alt="Argentine milanesa a la napolitana"></p>
+            <p><h3>Even better than you mother's! This mila
+                de berenjena will make you fall to the ground!</h3></p>
+                
+                <p><strong>Ingredients</strong></p>
+
+                <ul>
+                    <li>2 berenjenas grandes</li>
+                    <li>150 gr de harina</li>
+                    <li>3 huevos</li>
+                    <li>500 gr de pan rallado</li>
+                    <li>8 cdas. de salsa de tomate</li>
+                    <li>300 ml de aceite</li>
+                    <li>150 gr de jamón Cocido</li>
+                    <li>150 gr de mozzarella</li>
+                    <li>Orégano al gusto</li>
+                    <li>Sal al gusto</li>
+
+
+                </ul>
+
+
+                <p><strong>Procedure</strong></p>
+                <ol>
+                    <li>Cortar las berenjenas a lo largo, de 1 cm de espesor</li>
+                    <li>Dejar en colador con un toque de sal gruesa</li>
+                    <li>Lavar con agua, secar y pasar por harina, huevo y pan rallado</li>
+                    <li>Sobre cada milanesa colocar una cucharada de salsa de tomate, media feta de jamón y el queso mozzarella.</li>
+                    <li>Llevar a gratinar al horno</li>
+                    <li>ESpolvorear con orégano y servir</li>
+                    <li>las berenjenas a lo largo, de 1 cm de espesor</li>
+                    <li>Dejar en colador con un toque de sal gruesa</li>
+                    <li>Lavar con agua, secar y pasar por harina, huevo y pan rallado</li>
+                    <li>Sobre cada milanesa colocar una cucharada de salsa de tomate,
+                        media feta de jamón y el queso mozzarella.</li>
+                    <li>Llevar a gratinar al horno</li>
+                    <li>Espolvorear con orégano y servir</li>
+                </ol>    
+
+                
+
+
+
+
+   
+   
+   
+    </body>
 </html>
